--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ name = "mp4v2-sys"
 version = "0.1.0"
 authors = ["The mp4v2 Project Developers"]
 
-build = "make -f makefile.cargo"
+build = "build.rs"
 
 [lib]
 
