--- a/GNUmakefile.am
+++ b/GNUmakefile.am
@@ -16,6 +16,7 @@ libmp4v2_la_SOURCES = \
     src/atom_amr.cpp                     \
     src/atom_avc1.cpp                    \
     src/atom_avcC.cpp                    \
+    src/atom_camm.cpp                    \
     src/atom_chpl.cpp                    \
     src/atom_colr.cpp                    \
     src/atom_d263.cpp                    \
